Stock Search Function

--- a/ValueInvesting/ValueInvesting/Views/ValueInvestingForm.resx
+++ b/ValueInvesting/ValueInvesting/Views/ValueInvestingForm.resx
@@ -157,6 +157,9 @@
         tQ57ZzCmsV2FHRtsWmBiw/i2LGC4No/nP80TrK+XvnuGAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="toolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <metadata name="saveFileDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>122, 17</value>
   </metadata>
@@ -166,14 +169,221 @@
   <metadata name="updateWorker.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>642, 17</value>
   </metadata>
+  <metadata name="CountryImageList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>963, 17</value>
+  </metadata>
+  <data name="CountryImageList.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAG
+        LAAAAk1TRnQBSQFMAgEBAgEAAQgBAAEIAQABIAEAARYBAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAGA
+        AwABFgMAAQEBAAEgBgABLBIAAi0BLAE5AZkBkAGDAekBnQGRAYIB/wGdAZEBggH/AZ0BkQGCAf8BnQGR
+        AYIB/wGdAZEBggH/AZ0BkQGCAf8BnQGRAYIB/wGdAZEBggH/AZ0BkQGCAf8BnQGRAYIB/wGdAZEBggH/
+        AZ0BkQGCAf8BnQGRAYIB/wGdAZEBggH/AZ0BkQGCAf8BnQGRAYIB/wGdAZEBggH/AZ0BkQGCAf8BnQGR
+        AYIB/wGdAZEBggH/AZ0BkQGCAf8BnQGRAYIB/wGdAZEBggH/AZ0BkQGCAf8BnQGRAYIB/wGdAZEBggH/
+        AZ0BkQGCAf8BnQGRAYIB/wGYAY4BgwHmAi0BLAE5AiwBOAFNARABFAGDAekBAAEDAYkB/wEAAQMBiQH/
+        AQABAwGJAf8BAAEDAYkB/wEAAQMBiQH/AQABAwGJAf8BAAEDAYkB/wEAAQMBiQH/AQABAwGJAf8BAAED
+        AYkB/wEAAQMBiQH/AQABAwGJAf8BAAEDAYkB/wEAAQMBiQH/AQABAwGJAf8BAAEDAYkB/wEAAQMBiQH/
+        AQABAwGJAf8BAAEDAYkB/wEAAQMBiQH/AQABAwGJAf8BAAEDAYkB/wEAAQMBiQH/AQABAwGJAf8BAAED
+        AYkB/wEAAQMBiQH/AQABAwGJAf8BAAEDAYkB/wETARcBggHlAiwBOAFN/wABAAGZAZABhAHrAZ0BkQGC
+        Af8BrgGkAZcB/wGuAaQBlwH/Aa4BpAGXAf8BrgGkAZcB/wGuAaQBlwH/Aa4BpAGXAf8BrgGkAZcB/wGu
+        AaQBlwH/Aa4BpAGXAf8BrgGkAZcB/wGuAaQBlwH/Aa4BpAGXAf8BrgGkAZcB/wGuAaQBlwH/Aa4BpAGX
+        Af8BrgGkAZcB/wGuAaQBlwH/Aa4BpAGXAf8BrgGkAZcB/wGuAaQBlwH/Aa4BpAGXAf8BrgGkAZcB/wGu
+        AaQBlwH/Aa4BpAGXAf8BrgGkAZcB/wGuAaQBlwH/Aa4BpAGXAf8BrgGkAZcB/wGdAZEBggH/AZgBjgGE
+        AegBEQEUAYMB6AEAAQMBiQH/AQABAwGJAf8BAAEDAYkB/wEAAQMBiQH/AQABAwGJAf8BAAEDAYkB/wEA
+        AQMBiQH/AQABAwGJAf8BAAEDAYkB/wEAAQMBiQH/AQABAwGJAf8BAAEDAYkB/wEAAQMBiQH/AQABAwGJ
+        Af8BAAEDAYkB/wEAAQMBiQH/AQABAwGJAf8BAAEDAYkB/wEAAQMBiQH/AQABAwGJAf8BAAEDAYkB/wEA
+        AQMBiQH/AQABAwGJAf8BAAEDAYkB/wEAAQMBiQH/AQABAwGJAf8BAAEDAYkB/wEAAQMBiQH/AQABAwGJ
+        Af8BAAEDAYkB/wETARcBggHl/wABAAGdAZEBggH/AZ0BkQGCAf8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1
+        Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7
+        AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1
+        Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7
+        AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wGdAZEBggH/AZ0BkQGCAf8BnQGRAYIB/wGjAZgBiQH/AfgB8wHu
+        Af8B+AHzAe4B/wH4AfMB7gH/AfgB8wHuAf8B+AHzAe4B/wH4AfMB7gH/AfgB8wHuAf8B+AHzAe4B/wH4
+        AfMB7gH/AfgB8wHuAf8B+AHzAe4B/wH4AfMB7gH/AfgB8wHuAf8B+AHzAe4B/wH4AfMB7gH/AfgB8wHu
+        Af8B+AHzAe4B/wH4AfMB7gH/AfgB8wHuAf8B+AHzAe4B/wH4AfMB7gH/AfgB8wHuAf8B+AHzAe4B/wH4
+        AfMB7gH/AfgB8wHuAf8B+AHzAe4B/wH4AfMB7gH/AfgB8wHuAf8BnQGRAYIB/wGdAZEBggH//wABAAGd
+        AZEBggH/AZ0BkQGCAf8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1
+        Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7
+        AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1
+        Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wGd
+        AZEBggH/AZ0BkQGCAf8BnQGRAYIB/wGjAZgBiQH/AfgB8wHuAf8B+AHzAe4B/wH4AfMB7gH/AfgB8wHu
+        Af8B+AHzAe4B/wH4AfMB7gH/AfgB8wHuAf8B+AHzAe4B/wH4AfMB7gH/AfgB8wHuAf8B+AHzAe4B/wH4
+        AfMB7gH/AfgB8wHuAf8B+AHzAe4B/wH4AfMB7gH/AfgB8wHuAf8B+AHzAe4B/wH4AfMB7gH/AfgB8wHu
+        Af8B+AHzAe4B/wH4AfMB7gH/AfgB8wHuAf8B+AHzAe4B/wH4AfMB7gH/AfgB8wHuAf8B+AHzAe4B/wH4
+        AfMB7gH/AfgB8wHuAf8BnQGRAYIB/wGdAZEBggH//wABAAGdAZEBggH/AZ0BkQGCAf8B+wH4AfUB/wH7
+        AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1
+        Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7
+        AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1
+        Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wGdAZEBggH/AZ0BkQGCAf8BAAEDAYkB/wEA
+        AQMBiQH/ARsBJAHcAf8BGwEkAdwB/wEbASQB3AH/ARsBJAHcAf8BGwEkAdwB/wEbASQB3AH/ARsBJAHc
+        Af8BGwEkAdwB/wEbASQB3AH/ARsBJAHcAf8BGwEkAdwB/wEbASQB3AH/ARsBJAHcAf8BGwEkAdwB/wEb
+        ASQB3AH/ARsBJAHcAf8BGwEkAdwB/wEbASQB3AH/ARsBJAHcAf8BGwEkAdwB/wEbASQB3AH/ARsBJAHc
+        Af8BGwEkAdwB/wEbASQB3AH/ARsBJAHcAf8BGwEkAdwB/wEbASQB3AH/ARsBJAHcAf8BAAEDAYkB/wEA
+        AQMBiQH//wABAAGdAZEBggH/AZ0BkQGCAf8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7
+        AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1
+        Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7
+        AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1
+        Af8B+wH4AfUB/wGdAZEBggH/AZ0BkQGCAf8BAAEDAYkB/wEAAQMBiQH/ARsBJAHcAf8BGwEkAdwB/wEb
+        ASQB3AH/ARsBJAHcAf8BGwEkAdwB/wEbASQB3AH/ARsBJAHcAf8BGwEkAdwB/wEbASQB3AH/ARsBJAHc
+        Af8BGwEkAdwB/wEbASQB3AH/ARsBJAHcAf8BGwEkAdwB/wEbASQB3AH/ARsBJAHcAf8BGwEkAdwB/wEb
+        ASQB3AH/ARsBJAHcAf8BGwEkAdwB/wEbASQB3AH/ARsBJAHcAf8BGwEkAdwB/wEbASQB3AH/ARsBJAHc
+        Af8BGwEkAdwB/wEbASQB3AH/ARsBJAHcAf8BAAEDAYkB/wEAAQMBiQH//wABAAGdAZEBggH/AZ0BkQGC
+        Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7
+        AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1
+        Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7
+        AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wGdAZEBggH/AZ0BkQGC
+        Af8BnQGRAYIB/wGjAZgBiQH/AfgB8wHuAf8B+AHzAe4B/wH4AfMB7gH/AfgB8wHuAf8B+AHzAe4B/wH4
+        AfMB7gH/AfgB8wHuAf8B+AHzAe4B/wH4AfMB7gH/AfgB8wHuAf8B+AHzAe4B/wH4AfMB7gH/AfgB8wHu
+        Af8B+AHzAe4B/wH4AfMB7gH/AfgB8wHuAf8B+AHzAe4B/wH4AfMB7gH/AfgB8wHuAf8B+AHzAe4B/wH4
+        AfMB7gH/AfgB8wHuAf8B+AHzAe4B/wH4AfMB7gH/AfgB8wHuAf8B+AHzAe4B/wH4AfMB7gH/AfgB8wHu
+        Af8BnQGRAYIB/wGdAZEBggH//wABAAGdAZEBggH/AZ0BkQGCAf8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1
+        Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7
+        AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1
+        Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7
+        AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wGdAZEBggH/AZ0BkQGCAf8BnQGRAYIB/wGjAZgBiQH/AfgB8wHu
+        Af8B+AHzAe4B/wH4AfMB7gH/AfgB8wHuAf8B+AHzAe4B/wH4AfMB7gH/AfgB8wHuAf8B+AHzAe4B/wH4
+        AfMB7gH/AfgB8wHuAf8B+AHzAe4B/wH4AfMB7gH/AfgB8wHuAf8B+AHzAe4B/wH4AfMB7gH/AfgB8wHu
+        Af8B+AHzAe4B/wH4AfMB7gH/AfgB8wHuAf8B+AHzAe4B/wH4AfMB7gH/AfgB8wHuAf8B+AHzAe4B/wH4
+        AfMB7gH/AfgB8wHuAf8B+AHzAe4B/wH4AfMB7gH/AfgB8wHuAf8BnQGRAYIB/wGdAZEBggH//wABAAGd
+        AZEBggH/AZ0BkQGCAf8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1
+        Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7
+        AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1
+        Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wGd
+        AZEBggH/AZ0BkQGCAf8BkwE/AQ0B/wGNATcBCwH/AcABVQEjAf8BwAFUASMB/wHDAVoBJQH/AcMBWgEm
+        Af8BwAFVASMB/wHAAVQBIwH/AcMBWgElAf8BwwFaASYB/wHAAVUBIwH/AcABVAEjAf8BwwFaASUB/wHD
+        AVoBJgH/AcABVQEjAf8BwAFUASMB/wHDAVoBJQH/AcsBZwEsAf8BGwEkAdwB/wEbASQB3AH/ARsBJAHc
+        Af8BGwEkAdwB/wEbASQB3AH/ARsBJAHcAf8BGwEkAdwB/wEbASQB3AH/ARsBJAHcAf8BGwEkAdwB/wEb
+        ASQB3AH/ARsBJAHcAf8BAAEDAYkB/wEAAQMBiQH//wABAAGdAZEBggH/AZ0BkQGCAf8B+wH4AfUB/wH7
+        AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1
+        Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7
+        AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1
+        Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wGdAZEBggH/AZ0BkQGCAf8BjQE3AQsB/wGI
+        ATABCgH/AbwBTwEgAf8BvAFPASAB/wG8AU8BIAH/AbwBTwEgAf8BvAFPASAB/wG8AU8BIAH/AbwBTwEg
+        Af8BvAFPASAB/wG8AU8BIAH/AbwBTwEgAf8BvAFPASAB/wG8AU8BIAH/AbwBTwEgAf8BvAFPASAB/wG8
+        AU8BIAH/AcMBWgElAf8BGwEkAdwB/wEbASQB3AH/ARsBJAHcAf8BGwEkAdwB/wEbASQB3AH/ARsBJAHc
+        Af8BGwEkAdwB/wEbASQB3AH/ARsBJAHcAf8BGwEkAdwB/wEbASQB3AH/ARsBJAHcAf8BAAEDAYkB/wEA
+        AQMBiQH//wABAAGdAZEBggH/AZ0BkQGCAf8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7
+        AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1
+        Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7
+        AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1Af8B+wH4AfUB/wH7AfgB9QH/AfsB+AH1
+        Af8B+wH4AfUB/wGdAZEBggH/AZ0BkQGCAf8BiwE0AQsB/wGIATABCgH/AewB0AHFAf8B7AHQAcYB/wG8
+        AU8BIAH/AbwBTwEgAf8B7AHQAcUB/wHsAdABxgH/AbwBTwEgAf8BvAFPASAB/wHsAdABxQH/AewB0AHG
+        Af8BvAFPASAB/wG8AU8BIAH/AewB0AHFAf8B7AHQAcYB/wG8AU8BIAH/AcABVAEjAf8B+AHzAe4B/wH4
+        AfMB7gH/AfgB8wHuAf8B+AHzAe4B/wH4AfMB7gH/AfgB8wHuAf8B+AHzAe4B/wH4AfMB7gH/AfgB8wHu
+        Af8B+AHzAe4B/wH4AfMB7gH/AfgB8wHuAf8BnQGRAYIB/wGdAZEBggH//wADAAGTAf8CAAGTAf8BGgEk
+        Ad0B/wEaASQB3QH/ARoBJAHdAf8BGgEkAd0B/wEaASQB3QH/ARoBJAHdAf8BGgEkAd0B/wEaASQB3QH/
+        ARoBJAHdAf8BGgEkAd0B/wEaASQB3QH/ARoBJAHdAf8BGgEkAd0B/wEaASQB3QH/ARoBJAHdAf8BGgEk
+        Ad0B/wEaASQB3QH/ARoBJAHdAf8BGgEkAd0B/wEaASQB3QH/ARoBJAHdAf8BGgEkAd0B/wEaASQB3QH/
+        ARoBJAHdAf8BGgEkAd0B/wEaASQB3QH/ARoBJAHdAf8BGgEkAd0B/wIAAZMB/wIAAZMB/wGLATQBCwH/
+        AYgBMAEKAf8B7AHPAcQB/wHsAdABxQH/AbwBTwEgAf8BvAFPASAB/wHsAc8BxAH/AewB0AHFAf8BvAFP
+        ASAB/wG8AU8BIAH/AewBzwHEAf8B7AHQAcUB/wG8AU8BIAH/AbwBTwEgAf8B7AHPAcQB/wHsAdABxQH/
+        AbwBTwEgAf8BwAFVASMB/wH4AfMB7gH/AfgB8wHuAf8B+AHzAe4B/wH4AfMB7gH/AfgB8wHuAf8B+AHz
+        Ae4B/wH4AfMB7gH/AfgB8wHuAf8B+AHzAe4B/wH4AfMB7gH/AfgB8wHuAf8B+AHzAe4B/wGdAZEBggH/
+        AZ0BkQGCAf//AAMAAZMB/wIAAZMB/wEaASQB3QH/ARoBJAHdAf8BGgEkAd0B/wElAS4B3wH/ATgBQAHh
+        Af8BQAFIAeMB/wE/AUcB4wH/AScBMAHfAf8BGgEkAd0B/wEaASQB3QH/ARoBJAHdAf8BGgEkAd0B/wEa
+        ASQB3QH/ARoBJAHdAf8BGgEkAd0B/wEaASQB3QH/ARoBJAHdAf8BGgEkAd0B/wEaASQB3QH/ARoBJAHd
+        Af8BGgEkAd0B/wEaASQB3QH/ARoBJAHdAf8BGgEkAd0B/wEaASQB3QH/ARoBJAHdAf8BGgEkAd0B/wEa
+        ASQB3QH/AgABkwH/AgABkwH/AY0BNwELAf8BiAEwAQoB/wG8AU8BIAH/AbwBTwEgAf8B7AHQAcUB/wHs
+        AdABxgH/AbwBTwEgAf8BvAFPASAB/wHsAdABxQH/AewB0AHGAf8BvAFPASAB/wG8AU8BIAH/AewB0AHF
+        Af8B7AHQAcYB/wG8AU8BIAH/AbwBTwEgAf8BvAFPASAB/wHDAVoBJgH/ARsBJAHcAf8BGwEkAdwB/wEb
+        ASQB3AH/ARsBJAHcAf8BGwEkAdwB/wEbASQB3AH/ARsBJAHcAf8BGwEkAdwB/wEbASQB3AH/ARsBJAHc
+        Af8BGwEkAdwB/wEbASQB3AH/AQABAwGJAf8BAAEDAYkB//8AAwABkwH/AgABkwH/ARoBJAHdAf8BGgEk
+        Ad0B/wEwATkB4AH/AYMBiAHtAf8BzwHRAfgB/wHVAdcB+QH/Aa8BswHzAf8BTAFUAeQB/wEaASQB3QH/
+        ARoBJAHdAf8BGgEkAd0B/wEaASQB3QH/ARoBJAHdAf8BGgEkAd0B/wEaASQB3QH/ARoBJAHdAf8BGgEk
+        Ad0B/wEaASQB3QH/ARoBJAHdAf8BGgEkAd0B/wEaASQB3QH/ARoBJAHdAf8BGgEkAd0B/wEaASQB3QH/
+        ARoBJAHdAf8BGgEkAd0B/wEaASQB3QH/ARoBJAHdAf8CAAGTAf8CAAGTAf8BjQE3AQsB/wGIATABCgH/
+        AbwBTwEgAf8BvAFPASAB/wHsAc8BxAH/AewB0AHFAf8BvAFPASAB/wG8AU8BIAH/AewBzwHEAf8B7AHQ
+        AcUB/wG8AU8BIAH/AbwBTwEgAf8B7AHPAcQB/wHsAdABxQH/AbwBTwEgAf8BvAFPASAB/wG8AU8BIAH/
+        AcMBWgElAf8BGwEkAdwB/wEbASQB3AH/ARsBJAHcAf8BGwEkAdwB/wEbASQB3AH/ARsBJAHcAf8BGwEk
+        AdwB/wEbASQB3AH/ARsBJAHcAf8BGwEkAdwB/wEbASQB3AH/ARsBJAHcAf8BAAEDAYkB/wEAAQMBiQH/
+        /wADAAGTAf8CAAGTAf8BGgEkAd0B/wEbASUB3QH/AZgBnAHwAf8C/QL/AdcB2AH5Af8BbgF0AeoB/wEg
+        ASoB3gH/ARoBJAHdAf8BWwFiAecB/wFbAWIB5wH/ARoBJAHdAf8BGgEkAd0B/wEaASQB3QH/ARoBJAHd
+        Af8BGgEkAd0B/wEaASQB3QH/ARoBJAHdAf8BGgEkAd0B/wEaASQB3QH/ARoBJAHdAf8BGgEkAd0B/wEa
+        ASQB3QH/ARoBJAHdAf8BGgEkAd0B/wEaASQB3QH/ARoBJAHdAf8BGgEkAd0B/wEaASQB3QH/AgABkwH/
+        AgABkwH/AYsBNAELAf8BiAEwAQoB/wHsAdABxQH/AewB0AHGAf8BvAFPASAB/wG8AU8BIAH/AewB0AHF
+        Af8B7AHQAcYB/wG8AU8BIAH/AbwBTwEgAf8B7AHQAcUB/wHsAdABxgH/AbwBTwEgAf8BvAFPASAB/wHs
+        AdABxQH/AewB0AHGAf8BvAFPASAB/wHAAVQBIwH/AfgB8wHuAf8B+AHzAe4B/wH4AfMB7gH/AfgB8wHu
+        Af8B+AHzAe4B/wH4AfMB7gH/AfgB8wHuAf8B+AHzAe4B/wH4AfMB7gH/AfgB8wHuAf8B+AHzAe4B/wH4
+        AfMB7gH/AZ0BkQGCAf8BnQGRAYIB//8AAwABkwH/AgABkwH/ARoBJAHdAf8BKgEzAd8B/wHwAfEB/QH/
+        AfgB+QH+Af8BXAFjAecB/wEaASQB3QH/ARoBJAHdAf8BGgEkAd0B/wHLAc4B9wH/AcwBzgH3Af8BGgEk
+        Ad0B/wEaASQB3QH/ARoBJAHdAf8BGgEkAd0B/wEaASQB3QH/ARoBJAHdAf8BGgEkAd0B/wEaASQB3QH/
+        ARoBJAHdAf8BGgEkAd0B/wEaASQB3QH/ARoBJAHdAf8BGgEkAd0B/wEaASQB3QH/ARoBJAHdAf8BGgEk
+        Ad0B/wEaASQB3QH/ARoBJAHdAf8CAAGTAf8CAAGTAf8BiwE0AQsB/wGIATABCgH/AewBzwHEAf8B7AHQ
+        AcUB/wG8AU8BIAH/AbwBTwEgAf8B7AHPAcQB/wHsAdABxQH/AbwBTwEgAf8BvAFPASAB/wHsAc8BxAH/
+        AewB0AHFAf8BvAFPASAB/wG8AU8BIAH/AewBzwHEAf8B7AHQAcUB/wG8AU8BIAH/AcABVQEjAf8B+AHz
+        Ae4B/wH4AfMB7gH/AfgB8wHuAf8B+AHzAe4B/wH4AfMB7gH/AfgB8wHuAf8B+AHzAe4B/wH4AfMB7gH/
+        AfgB8wHuAf8B+AHzAe4B/wH4AfMB7gH/AfgB8wHuAf8BnQGRAYIB/wGdAZEBggH//wADAAGTAf8CAAGT
+        Af8BGgEkAd0B/wE+AUYB4wX/AeoB6wH8Af8BHAEmAd0B/wEaASQB3QH/AXoBgQHrAf8BewGBAesB/wFp
+        AXAB6QH/AWoBcQHpAf8BegGBAesB/wF7AYEB6wH/ARoBJAHdAf8BGgEkAd0B/wEaASQB3QH/ARoBJAHd
+        Af8BGgEkAd0B/wEaASQB3QH/ARoBJAHdAf8BGgEkAd0B/wEaASQB3QH/ARoBJAHdAf8BGgEkAd0B/wEa
+        ASQB3QH/ARoBJAHdAf8BGgEkAd0B/wEaASQB3QH/ARoBJAHdAf8CAAGTAf8CAAGTAf8BjQE3AQsB/wGI
+        ATABCgH/AbwBTwEgAf8BvAFPASAB/wHsAdABxQH/AewB0AHGAf8BvAFPASAB/wG8AU8BIAH/AewB0AHF
+        Af8B7AHQAcYB/wG8AU8BIAH/AbwBTwEgAf8B7AHQAcUB/wHsAdABxgH/AbwBTwEgAf8BvAFPASAB/wG8
+        AU8BIAH/AcMBWgEmAf8BGwEkAdwB/wEbASQB3AH/ARsBJAHcAf8BGwEkAdwB/wEbASQB3AH/ARsBJAHc
+        Af8BGwEkAdwB/wEbASQB3AH/ARsBJAHcAf8BGwEkAdwB/wEbASQB3AH/ARsBJAHcAf8BAAEDAYkB/wEA
+        AQMBiQH//wADAAGTAf8CAAGTAf8BGgEkAd0B/wEtATcB4AH/AfcB+AH+Af8C9gH+Af8BQAFIAeMB/wEa
+        ASQB3QH/AcoBzQH3Af8BywHOAfcB/wEaASQB3QH/ARoBJAHdAf8BygHNAfcB/wHLAc4B9wH/ARoBJAHd
+        Af8BGgEkAd0B/wEaASQB3QH/ARoBJAHdAf8BGgEkAd0B/wEaASQB3QH/ARoBJAHdAf8BGgEkAd0B/wEa
+        ASQB3QH/ARoBJAHdAf8BGgEkAd0B/wEaASQB3QH/ARoBJAHdAf8BGgEkAd0B/wEaASQB3QH/ARoBJAHd
+        Af8CAAGTAf8CAAGTAf8BjQE3AQsB/wGIATABCgH/AbwBTwEgAf8BvAFPASAB/wHsAc8BxAH/AewB0AHF
+        Af8BvAFPASAB/wG8AU8BIAH/AewBzwHEAf8B7AHQAcUB/wG8AU8BIAH/AbwBTwEgAf8B7AHPAcQB/wHs
+        AdABxQH/AbwBTwEgAf8BvAFPASAB/wG8AU8BIAH/AcMBWgElAf8BGwEkAdwB/wEbASQB3AH/ARsBJAHc
+        Af8BGwEkAdwB/wEbASQB3AH/ARsBJAHcAf8BGwEkAdwB/wEbASQB3AH/ARsBJAHcAf8BGwEkAdwB/wEb
+        ASQB3AH/ARsBJAHcAf8BAAEDAYkB/wEAAQMBiQH//wADAAGTAf8CAAGTAf8BGgEkAd0B/wEcASYB3QH/
+        AagBrAHyBf8BwAHDAfUB/wEzATsB4QH/AUkBUQHkAf8BSQFSAeQB/wGcAaAB8AH/AZwBoAHwAf8BSQFR
+        AeQB/wFJAVIB5AH/ARoBJAHdAf8BGgEkAd0B/wEaASQB3QH/ARoBJAHdAf8BGgEkAd0B/wEaASQB3QH/
+        ARoBJAHdAf8BGgEkAd0B/wEaASQB3QH/ARoBJAHdAf8BGgEkAd0B/wEaASQB3QH/ARoBJAHdAf8BGgEk
+        Ad0B/wEaASQB3QH/ARoBJAHdAf8CAAGTAf8CAAGTAf8BiwE0AQsB/wGIATABCgH/AewB0AHFAf8B7AHQ
+        AcYB/wG8AU8BIAH/AbwBTwEgAf8B7AHQAcUB/wHsAdABxgH/AbwBTwEgAf8BvAFPASAB/wHsAdABxQH/
+        AewB0AHGAf8BvAFPASAB/wG8AU8BIAH/AewB0AHFAf8B7AHQAcYB/wG8AU8BIAH/AcABVAEjAf8B+AHz
+        Ae4B/wH4AfMB7gH/AfgB8wHuAf8B+AHzAe4B/wH4AfMB7gH/AfgB8wHuAf8B+AHzAe4B/wH4AfMB7gH/
+        AfgB8wHuAf8B+AHzAe4B/wH4AfMB7gH/AfgB8wHuAf8BnQGRAYIB/wGdAZEBggH//wADAAGTAf8CAAGT
+        Af8BGgEkAd0B/wEaASQB3QH/AS8BOAHgAf8BkgGXAe8B/wHiAeMB+gH/AdIB1AH4Af8BbAFyAekB/wEl
+        AS8B3wH/AcoBzQH3Af8BywHOAfcB/wEaASQB3QH/ARoBJAHdAf8BGgEkAd0B/wEaASQB3QH/ARoBJAHd
+        Af8BGgEkAd0B/wEaASQB3QH/ARoBJAHdAf8BGgEkAd0B/wEaASQB3QH/ARoBJAHdAf8BGgEkAd0B/wEa
+        ASQB3QH/ARoBJAHdAf8BGgEkAd0B/wEaASQB3QH/ARoBJAHdAf8BGgEkAd0B/wIAAZMB/wIAAZMB/wGL
+        ATQBCwH/AYgBMAEKAf8B7AHPAcQB/wHsAdABxQH/AbwBTwEgAf8BvAFPASAB/wHsAc8BxAH/AewB0AHF
+        Af8BvAFPASAB/wG8AU8BIAH/AewBzwHEAf8B7AHQAcUB/wG8AU8BIAH/AbwBTwEgAf8B7AHPAcQB/wHs
+        AdABxQH/AbwBTwEgAf8BwAFVASMB/wH4AfMB7gH/AfgB8wHuAf8B+AHzAe4B/wH4AfMB7gH/AfgB8wHu
+        Af8B+AHzAe4B/wH4AfMB7gH/AfgB8wHuAf8B+AHzAe4B/wH4AfMB7gH/AfgB8wHuAf8B+AHzAe4B/wGd
+        AZEBggH/AZ0BkQGCAf//AAEAAhMBjwHoAgABkwH/AQEBAgGaAf8BAQECAZoB/wICAZoB/wEKAQsBmwH/
+        AhMBnAH/AikBpQH/AjEBqwH/ARsBHAGkAf8CEQGcAf8BEQESAZwB/wEBAQIBmgH/AQEBAgGaAf8BAQEC
+        AZoB/wEBAQIBmgH/AQEBAgGaAf8BAQECAZoB/wEBAQIBmgH/AQEBAgGaAf8BAQECAZoB/wEBAQIBmgH/
+        AQEBAgGaAf8BAQECAZoB/wEBAQIBmgH/AQEBAgGaAf8BAQECAZoB/wEBAQIBmgH/AQEBAgGaAf8BAQEC
+        AZoB/wIAAZMB/wITAY8B6AF1ATEBIAH7AYgBMAEKAf8BiAEwAQoB/wGIATABCgH/AYgBMAEKAf8BiAEw
+        AQoB/wGIATABCgH/AYgBMAEKAf8BiAEwAQoB/wGIATABCgH/AYgBMAEKAf8BiAEwAQoB/wGIATABCgH/
+        AYgBMAEKAf8BiAEwAQoB/wGIATABCgH/AYgBMAEKAf8BjQE3AQsB/wEAAQMBiQH/AQABAwGJAf8BAAED
+        AYkB/wEAAQMBiQH/AQABAwGJAf8BAAEDAYkB/wEAAQMBiQH/AQABAwGJAf8BAAEDAYkB/wEAAQMBiQH/
+        AQABAwGJAf8BAAEDAYkB/wEAAQMBiQH/AREBFAGDAej/AAEAAhsBHwEnARQBFQGOAeYCAAGTAf8CAAGT
+        Af8CAAGTAf8CAAGTAf8CAAGTAf8CAAGTAf8CAAGTAf8CAAGTAf8CAAGTAf8CAAGTAf8CAAGTAf8CAAGT
+        Af8CAAGTAf8CAAGTAf8CAAGTAf8CAAGTAf8CAAGTAf8CAAGTAf8CAAGTAf8CAAGTAf8CAAGTAf8CAAGT
+        Af8CAAGTAf8CAAGTAf8CAAGTAf8CAAGTAf8CAAGTAf8CAAGTAf8BFAEVAY4B5gIbAR8BJwE1ATMBPwFd
+        AXUBMQEgAfsBiwE0AQsB/wGLATQBCwH/AY0BNwELAf8BjQE3AQsB/wGLATQBCwH/AYsBNAELAf8BjQE3
+        AQsB/wGNATcBCwH/AYsBNAELAf8BiwE0AQsB/wGNATcBCwH/AY0BNwELAf8BiwE0AQsB/wGLATQBCwH/
+        AY0BNwELAf8BkwE/AQ0B/wEAAQMBiQH/AQABAwGJAf8BAAEDAYkB/wEAAQMBiQH/AQABAwGJAf8BAAED
+        AYkB/wEAAQMBiQH/AQABAwGJAf8BAAEDAYkB/wEAAQMBiQH/AQABAwGJAf8BAAEDAYkB/wERARQBgwHo
+        AiwBOAFN/wABAAFCAU0BPgcAAT4DAAEoAwABgAMAARYDAAEBAQABAQUAAWABARYAA///AGIACw==
+</value>
+  </data>
+  <metadata name="growthPriceRenderer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>797, 17</value>
+  </metadata>
   <metadata name="growthPriceRenderer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>797, 17</value>
   </metadata>
   <metadata name="dividendPriceRenderer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>435, 17</value>
   </metadata>
+  <metadata name="dividendPriceRenderer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>435, 17</value>
+  </metadata>
   <metadata name="assetPriceRenderer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 60</value>
+    <value>1110, 17</value>
+  </metadata>
+  <metadata name="assetPriceRenderer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>1110, 17</value>
   </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
